demo/alb-ingress-controller-dep.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "1"
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"apps/v1","kind":"Deployment","metadata":{"annotations":{},"labels":{"app.kubernetes.io/name":"alb-ingress-controller"},"name":"alb-ingress-controller","namespace":"kube-system"},"spec":{"selector":{"matchLabels":{"app.kubernetes.io/name":"alb-ingress-controller"}},"template":{"metadata":{"labels":{"app.kubernetes.io/name":"alb-ingress-controller"}},"spec":{"containers":[{"args":["--ingress-class=alb"],"env":null,"image":"docker.io/amazon/aws-alb-ingress-controller:v1.1.8","n [...]
  creationTimestamp: "2020-08-22T11:48:17Z"
  generation: 1
  labels:
    app.kubernetes.io/name: alb-ingress-controller
  name: alb-ingress-controller
  namespace: kube-system
  resourceVersion: "15829"
  selfLink: /apis/apps/v1/namespaces/kube-system/deployments/alb-ingress-controller
  uid: 00678532-2d70-42ee-8df4-a5ed2479f928
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app.kubernetes.io/name: alb-ingress-controller
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app.kubernetes.io/name: alb-ingress-controller
    spec:
      containers:
      - args:
        - --ingress-class=alb
        - --cluster-name=eks-demo
        - --aws-vpc-id=vpc-07300093b4d6d4e97
        - --aws-region=us-east-2
        image: docker.io/amazon/aws-alb-ingress-controller:v1.1.8
        imagePullPolicy: IfNotPresent
        name: alb-ingress-controller
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      serviceAccount: alb-ingress-controller
      serviceAccountName: alb-ingress-controller
      terminationGracePeriodSeconds: 30
status:
  conditions:
  - lastTransitionTime: "2020-08-22T11:48:17Z"
    lastUpdateTime: "2020-08-22T11:48:17Z"
    message: Deployment does not have minimum availability.
    reason: MinimumReplicasUnavailable
    status: "False"
    type: Available
  - lastTransitionTime: "2020-08-22T11:48:17Z"
    lastUpdateTime: "2020-08-22T11:48:17Z"
    message: ReplicaSet "alb-ingress-controller-58c846f886" is progressing.
    reason: ReplicaSetUpdated
    status: "True"
    type: Progressing
  observedGeneration: 1
  replicas: 1
  unavailableReplicas: 1
  updatedReplicas: 1
