demo/httpd-dep.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: httpd
  name: httpd
  namespace: admcoe
spec:
  replicas: 1
  selector:
    matchLabels:
      app: httpd
  strategy: {}
  template:
    metadata:
      labels:
        app: httpd
    spec:
      volumes:
      - name: my-app-data
        persistentVolumeClaim:
           claimName: httpd-claim
      containers:
      - image: httpd
        name: httpd
        volumeMounts:
        - mountPath: /usr/local/apache2/htdocs/
          name: my-app-data
        resources: {}
status: {}
