demo/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: "admcoe-ingress"
  namespace: "admcoe"
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
  labels:
    app: admcoe-ingress
spec:
  rules:
    - http:
        paths:
          - path: /*
            backend:
              serviceName: "httpd"
              servicePort: 80
